[tool.poetry]
name = "cdr"
version = "0.1.0"
description = ""
authors = []
include = ["cdr.py", "cdr_pb2.py"]

[tool.poetry.dependencies]
python = "^3.7"
google = "^3.0.0"
protobuf = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
